--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera ">
+            cabecera
+        </div>
+        
         <div id="post"></div>
         <h1>Aqui haremos nuestro blogpost atractivo</h1>
     <h4>
