finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div id="container">
-        <div id="cabecera ">
-            cabecera
-        </div>
+        <div id="cabecera">
+            HyperBlog Tu Blog de Confianza
+        </div> 
         
         <div id="post"></div>
         <h1>Aqui haremos nuestro blogpost atractivo</h1>
