agregado el contenido adicional del blog y una peor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,13 @@
         chica muy linda y muy tierna, llamada gugu jijijiji, ella lo quiere mucho y el
         la quiere mucho a ella.
     </h4>
+    <p>
+        Este es el segundo parrafo, la historia de martin en la bodega
+        en la que toca localizar hasta el cansancio, por eso quiero
+        aprender sobre tecnologia y trabajar en esta industria
+        para que en un futuro tener mi propia empresa basada
+        en tech.
+    </p>
     </div>
     
     
