modifique el texto de hypertext y el color del body

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            HyperBlog Tu Blog de Confianza
+           Tu Blog de cabecera
         </div> 
         
         <div id="post"></div>
