--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id= "logo" src="imagenes/logonegro.png">
            Tu Blog de cabecera
         </div> 
         
