agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,7 @@
         chica muy linda y muy tierna, llamada gugu jijijiji, ella lo quiere mucho y el
         la quiere mucho a ella.
     </h4>
+    <p><img src="ultramarp.png" width="100%"></p>
     <p>
         Este es el segundo parrafo, la historia de martin en la bodega
         en la que toca localizar hasta el cansancio, por eso quiero
